# laravel-devcontainer-vue-starterkit

./: .env.e2e  .env.example  .gitignore  .gitmodules  .mcp.json  .tmux.conf  CLAUDE.md  README.md  composer.json  docker-compose.yml  eslint.config.js  knip.config.ts  package-lock.json  package.json  phpstan.neon  playwright.config.ts  rector.php  vite.config.ts
.claude/: settings copy.json  (+4 more)
devtools/: README.md  configure-urls.sh  ensure-app-key.sh  ensure-composer.sh  ensure-env.sh  ensure-migrated.sh  ensure-npm.sh  pyproject.toml  qa.sh  requirements.txt  serve.sh
devtools/claude-hooks/E2EPathValidator/: .gitignore  README.md  main.py  prompt.md  pyproject.toml
devtools/claude-hooks/SubAgentReviewer/: .gitignore  ARCHITECTURE.md  README.md  config.json  main.py  pyproject.toml  test_hook_input.py
devtools/code-reviewer/: README.md  cli.py  config.json  prompt.md
devtools/code-reviewer/sessions/: .gitignore
devtools/code-reviewer/src/: __init__.py
devtools/dev/: start.sh  status.sh  stop.sh
devtools/git/: branch.sh  commit.sh  pr.sh
devtools/lib/: queue.sh
devtools/lint/: deadcode.sh  js.sh  php.sh  ts.sh
devtools/mcp/playwright/: README.md  playwright-server.cjs  playwright.sh
devtools/review/: code.sh
devtools/services/: _env-watch.sh  _lib.sh  cache.sh  database.sh  desktop.sh  logs.sh  serve.sh  vite.sh
devtools/setup/: _lib.sh  app-key.sh  ci.sh  composer.sh  configure-access.sh  configure-ports.sh  env.sh  migrated.sh  npm.sh  urls.sh
devtools/sync/: all.sh  models.sh  routes.sh  types.sh
devtools/telemetry-sync/: README.md  cli.py  config.json
devtools/test/: php.sh
(+171 files in other folders)
