[project]
name = "devtools"
version = "0.1.0"
description = "Development tools for  - code review CLIs and shared packages"
requires-python = ">=3.11"
dependencies = [
    "claude-agent-sdk>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Include packages directory for the reviewer library
packages = ["packages/reviewer"]
