[project]
name = "e2e-path-validator"
version = "1.0.0"
description = "Pre-tool hook to validate E2E test file paths using Claude Agent SDK"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk>=0.1.0",
]

[project.scripts]
e2e-path-validator = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
